Getting rid of Mockito in tests
Mockito is not Java 25-friendly