@@ -20,23 +20,25 @@
 package io.bootique.config.jackson.parser;
 
 import io.bootique.BootiqueException;
+import io.bootique.jackson.DefaultJacksonService;
 import io.bootique.jackson.JacksonService;
 import io.bootique.resource.ResourceFactory;
 import org.junit.jupiter.api.Test;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.mock;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class MultiFormatJsonNodeParserTest {
 
-    ConfigurationFormatParser jsonParser = new JsonConfigurationFormatParser(mock(JacksonService.class));
-    ConfigurationFormatParser yamlParser = new YamlConfigurationFormatParser(mock(JacksonService.class));
+    JacksonService jacksonService = new DefaultJacksonService();
+    ConfigurationFormatParser jsonParser = new JsonConfigurationFormatParser(jacksonService);
+    ConfigurationFormatParser yamlParser = new YamlConfigurationFormatParser(jacksonService);
 
     private Set<ConfigurationFormatParser> createParsersSet() {
         return new HashSet<>(Arrays.asList(jsonParser, yamlParser));
@@ -46,22 +48,22 @@ public class MultiFormatJsonNodeParserTest {
     public void parser() throws MalformedURLException {
         MultiFormatJsonNodeParser parser = new MultiFormatJsonNodeParser(createParsersSet());
 
-        assertSame(jsonParser, parser.parser(null, new URL("http://example.org/test.json")));
-        assertSame(jsonParser, parser.parser("", new URL("http://example.org/test.json")));
+        assertSame(jsonParser, parser.parser(null, URI.create("http://example.org/test.json").toURL()));
+        assertSame(jsonParser, parser.parser("", URI.create("http://example.org/test.json").toURL()));
 
-        assertSame(jsonParser, parser.parser("application/json", new URL("http://example.org/test")));
-        assertSame(jsonParser, parser.parser("", new URL("http://example.org/test.json?test=abc")));
+        assertSame(jsonParser, parser.parser("application/json", URI.create("http://example.org/test").toURL()));
+        assertSame(jsonParser, parser.parser("", URI.create("http://example.org/test.json?test=abc").toURL()));
 
         assertSame(jsonParser, parser.parser("application/json", new ResourceFactory("stdin:json").getUrl()));
 
-        assertSame(yamlParser, parser.parser(null, new URL("http://example.org/test.yml")));
-        assertSame(yamlParser, parser.parser("", new URL("http://example.org/test.yml")));
-        assertSame(yamlParser, parser.parser("", new URL("http://example.org/test.yaml")));
-        assertSame(yamlParser, parser.parser("", new URL("http://example.org/test.yaml?test=abc")));
-        assertSame(yamlParser, parser.parser("application/x-yaml", new URL("http://example.org/test")));
+        assertSame(yamlParser, parser.parser(null, URI.create("http://example.org/test.yml").toURL()));
+        assertSame(yamlParser, parser.parser("", URI.create("http://example.org/test.yml").toURL()));
+        assertSame(yamlParser, parser.parser("", URI.create("http://example.org/test.yaml").toURL()));
+        assertSame(yamlParser, parser.parser("", URI.create("http://example.org/test.yaml?test=abc").toURL()));
+        assertSame(yamlParser, parser.parser("application/x-yaml", URI.create("http://example.org/test").toURL()));
 
         assertSame(yamlParser, parser.parser("application/x-yaml", new ResourceFactory("stdin:yaml").getUrl()));
 
-        assertThrows(BootiqueException.class, () -> parser.parser("", new URL("http://example.org/test")));
+        assertThrows(BootiqueException.class, () -> parser.parser("", URI.create("http://example.org/test").toURL()));
     }
 }
